# HyperplaneFinder

./: .gitignore  CMakeLists.txt  README.md  common.cmake
cmake/: common.cmake  inja.cmake  json.cmake
ide/: configure_VS2017.cmd
include/: CombinationGenerator.h  Line.h  PointsGeometry.h  Tokenizer.h
presentation/: Makefile  clean.cmd  frame3.tex  frame_algo_compute_veldkamp_lines.tex  frame_algo_distinguish_veldkamp_lines.tex  frame_d2_hyperplanes.tex  frame_d2_hyperplanes_table.tex  frame_d2_hyperplanes_transformation.tex  frame_d2_veldkamp_lines_table.tex  frame_d2_velkamp_line.tex  frame_d3_hyperplane.tex  frame_d3_hyperplane_coordinates_permutations.tex  frame_d3_hyperplane_dimensions_permutations.tex  frame_d3_hyperplane_slices.tex  frame_d3_hyperplanes_table.tex  frame_d3_veldkamp_lines_table.tex  frame_d3_veldkamp_lines_table_permutations.tex  frame_d4_hyperplanes_table.tex  frame_hyperplane_definition.tex  frame_working_space_1.tex  frame_working_space_2.tex  frame_working_space_3.tex  main.tex  make.cmd
presentation/algorithms/: AlgorithmDefinition.sty  compute_veldkamp_lines.algo  compute_veldkamp_lines_1.algo  compute_veldkamp_lines_2.algo  distinguish_veldkamp_lines.algo  lstalgorithms.sty
presentation/figures/: false_hyperplane.tex  figures_common.tex  geometry_3_4_slice_x_print.tex  geometry_3_4_slice_y_print.tex  geometry_3_4_slice_z_print.tex  geometry_print.tex  geometry_print_points.tex  veldkamp_line_2_print1.tex  veldkamp_line_2_print2.tex
src/: CombinationGenerator.cpp  CombinationGenerator.hpp  EquationSolver.hpp  HyperplaneTableEntry.hpp  HyperplanesUtility.hpp  LatexPrinter.cpp  LatexPrinter.hpp  Line.cpp  PermutationGenerator.hpp  PointGeometry.hpp  PointsGeometry.cpp  VeldkampLineTableEntry.hpp  VeldkampLinesUtility.hpp  impossible.hpp  index_repetition.hpp  main.cpp  math.hpp  math_utility.hpp
templates/: document.tex  hyperplane_representation.tex  hyperplane_representation_print.tex  hyperplanes_table.tex  lines_table.tex  packages.tex  settings.tex
templates/representations/: hyperplane_representation.tex  hyperplane_representation_dim4_full.tex  hyperplane_representation_dim4_part.tex  hyperplanes_representation_document.tex
templates/tables/: document.tex  hyperplanes_table.tex  lines_table.tex  settings.tex
